--- a/new-cc-blog/new_blog_project/src/main/resources/templates/admin/admin.html
+++ b/new-cc-blog/new_blog_project/src/main/resources/templates/admin/admin.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" th:href="@{/static/css/ionicons.min.css}">
     <link rel="stylesheet" th:href="@{/static/css/OverlayScrollbars.min.css}">
 </head>
-<body class="hold-transition sidebar-mini layout-fixed" data-panel-auto-height-mode="height">
+<body class="hold-transition sidebar-mini layout-fixed" data-panel-auto-height-mode="height" style="overflow: hidden">
 <div class="wrapper">
     <nav class="main-header navbar navbar-expand navbar-white navbar-light">
         <ul class="navbar-nav">
