--- a/new-cc-blog/new_blog_project/src/main/resources/templates/admin/common/sidebar.html
+++ b/new-cc-blog/new_blog_project/src/main/resources/templates/admin/common/sidebar.html
@@ -75,6 +75,20 @@
         </li>
         <li class="nav-item">
             <a href="#" class="nav-link">
+                <i class="nav-icon fas fa-link"></i>
+                <p>友人帐管理<i class="fas fa-angle-left right"></i></p>
+            </a>
+            <ul class="nav nav-treeview">
+                <li class="nav-item">
+                    <a href="/admin/friendData?page=1&search=all&searchType=all" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>友人帐列表</p>
+                    </a>
+                </li>
+            </ul>
+        </li>
+        <li class="nav-item">
+            <a href="#" class="nav-link">
                 <i class="nav-icon fas fa-list-alt"></i>
                 <p>日志管理<i class="fas fa-angle-left right"></i></p>
             </a>
