--- a/new-cc-blog/new_blog_project/src/main/resources/templates/index/article_show.html
+++ b/new-cc-blog/new_blog_project/src/main/resources/templates/index/article_show.html
@@ -71,7 +71,7 @@
         <section class="content">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-9">
+                    <div class="col-md-9 animated fadeIn">
                         <div class="card">
                             <div class="card-header p-2">
                                 <ul class="nav nav-pills">
