--- a/new-cc-blog/new_blog_project/src/main/resources/templates/index/forgot_password.html
+++ b/new-cc-blog/new_blog_project/src/main/resources/templates/index/forgot_password.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>登录 | 小虚无的下午茶</title>
+    <title>找回密码 | 小虚无的下午茶</title>
     <link rel="icon" th:href="@{/static/images/ico/favicon.ico}">
     <link rel="stylesheet" th:href="@{/static/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/static/css/animate.min.css}">
@@ -12,16 +12,16 @@
     <link rel="stylesheet" th:href="@{/static/css/toastr.min.css}">
     <link rel="stylesheet" th:href="@{/static/css/ionicons.min.css}">
 </head>
-<body class="login-page">
-<div class="login-box">
-    <div class="login-logo">
-        <a href="/">登录<b>小虚无的下午茶</b></a>
+<body class="register-page">
+<div class="register-box animated fadeIn">
+    <div class="register-logo">
+        <a href="/"><b>找回密码</b>小虚无的下午茶</a>
     </div>
     <div class="card">
-        <div class="card-body login-card-body">
-            <p class="login-box-msg">登录你的账户吧</p>
+        <div class="card-body register-card-body">
+            <p class="login-box-msg">你忘记你的密码了吗？在这里你可以轻松的找回账户密码</p>
             <div class="input-group mb-3">
-                <input type="email" id="login-email" class="form-control" placeholder="请输入邮箱" autocomplete="new-email">
+                <input type="email" id="forgot-password-email" class="form-control" placeholder="请输入邮箱" autocomplete="new-email">
                 <div class="input-group-append">
                     <div class="input-group-text">
                         <span class="fas fa-envelope"></span>
@@ -29,29 +29,35 @@
                 </div>
             </div>
             <div class="input-group mb-3">
-                <input type="password" id="login-password" class="form-control" placeholder="请输入密码" autocomplete="new-password">
+                <input type="password" id="forgot-password-password" class="form-control" placeholder="请输入新密码" autocomplete="new-password">
                 <div class="input-group-append">
                     <div class="input-group-text">
                         <span class="fas fa-lock"></span>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-4">
-                    <button class="btn btn-default btn-block" onclick="history.back();">返回</button>
-                </div>
-                <div class="col-4">
-                </div>
-                <div class="col-4">
-                    <button id="btn-login" class="btn btn-primary btn-block">登录</button>
+            <div class="input-group mb-3">
+                <input type="password" id="forgot-password-retype-password" class="form-control" placeholder="请重新输入新密码" autocomplete="new-retype-password">
+                <div class="input-group-append">
+                    <div class="input-group-text">
+                        <span class="fas fa-lock"></span>
+                    </div>
                 </div>
             </div>
-            <p class="mb-1">
-                <a href="#">忘记密码</a>
-            </p>
-            <p class="mb-0">
-                <a href="/registered" class="text-center">注册</a>
-            </p>
+            <div class="input-group mb-3">
+                <input type="number" id="forgot-password-verification-code" class="form-control" placeholder="请输入验证码" autocomplete="new-verification">
+                <span class="input-group-append">
+                    <button class="btn btn-info btn-flat" id="btn-forgot-password-verification">获取验证码</button>
+                </span>
+            </div>
+            <div class="row">
+                <div class="col-8">
+                </div>
+                <div class="col-4">
+                    <button class="btn btn-primary btn-block" id="btn-forgot-password">找回密码</button>
+                </div>
+            </div>
+            <a href="/login" class="text-center">我想起来账号密码了</a>
         </div>
     </div>
 </div>
@@ -59,7 +65,6 @@
 <script type="text/javascript" th:src="@{/static/js/jquery.min.js}"></script>
 <script type="text/javascript" th:src="@{/static/js/bootstrap.min.js}"></script>
 <script type="text/javascript" th:src="@{/static/js/main.js}"></script>
-<script type="text/javascript" th:src="@{/static/js/admin.js}"></script>
 <script type="text/javascript" th:src="@{/static/js/toastr.min.js}"></script>
 <script type="text/javascript" th:src="@{/static/js/adminlte.min.js}"></script>
 </html>
