--- a/new-cc-blog/new_blog_project/src/main/resources/templates/index/registered.html
+++ b/new-cc-blog/new_blog_project/src/main/resources/templates/index/registered.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" th:href="@{/static/css/ionicons.min.css}">
 </head>
 <body class="register-page">
-<div class="register-box">
+<div class="register-box animated fadeIn">
     <div class="register-logo">
         <a href="/"><b>注册</b>小虚无的下午茶</a>
     </div>
@@ -73,7 +73,6 @@
 <script type="text/javascript" th:src="@{/static/js/jquery.min.js}"></script>
 <script type="text/javascript" th:src="@{/static/js/bootstrap.min.js}"></script>
 <script type="text/javascript" th:src="@{/static/js/main.js}"></script>
-<script type="text/javascript" th:src="@{/static/js/admin.js}"></script>
 <script type="text/javascript" th:src="@{/static/js/toastr.min.js}"></script>
 <script type="text/javascript" th:src="@{/static/js/adminlte.min.js}"></script>
 </html>
