--- a/new-cc-blog/new_blog_project/src/main/resources/templates/admin/article/admin_article_edit.html
+++ b/new-cc-blog/new_blog_project/src/main/resources/templates/admin/article/admin_article_edit.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" th:href="@{/static/css/ionicons.min.css}">
 </head>
 <body class="sidebar-mini layout-fixed" style="height: auto;">
-<div class="wrapper">
+<div class="wrapper animated fadeIn">
     <section class="content-header">
         <div class="container-fluid">
             <div class="row mb-2">
