--- a/new-cc-blog/new_blog_project/src/main/resources/templates/admin/dashboard/admin_dashboard.html
+++ b/new-cc-blog/new_blog_project/src/main/resources/templates/admin/dashboard/admin_dashboard.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" th:href="@{/static/css/ionicons.min.css}">
 </head>
 <body class="sidebar-mini layout-fixed" style="height: auto;">
-<div class="wrapper">
+<div class="wrapper animated fadeIn">
     <div class="content-header">
         <div class="container-fluid">
             <div class="row mb-2">
@@ -72,7 +72,7 @@
                 <div class="col-lg-3 col-6">
                     <div class="small-box bg-danger">
                         <div class="inner">
-                            <h3>10</h3>
+                            <h3>--</h3>
                             <p>信息比例图</p>
                         </div>
                         <div class="icon">
