--- a/new-cc-blog/new_blog_project/src/main/resources/templates/admin/email/admin_email_edit.html
+++ b/new-cc-blog/new_blog_project/src/main/resources/templates/admin/email/admin_email_edit.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" th:href="@{/static/css/summernote-bs4.min.css}">
 </head>
 <body class="sidebar-mini layout-fixed" style="height: auto;">
-<div class="wrapper">
+<div class="wrapper animated fadeIn">
     <section class="content-header">
         <div class="container-fluid">
             <div class="row mb-2">
