--- a/new-cc-blog/new_blog_project/src/main/resources/templates/common/sidebar.html
+++ b/new-cc-blog/new_blog_project/src/main/resources/templates/common/sidebar.html
@@ -24,12 +24,12 @@
                 <p>友人帐</p>
             </a>
         </li>
-        <li class="nav-item">
+        <!--<li class="nav-item">
             <a href="/data" class="nav-link">
                 <i class="nav-icon fas fa-chart-bar"></i>
                 <p>数据统计</p>
             </a>
-        </li>
+        </li>-->
         <li class="nav-item">
             <a href="/home" class="nav-link">
                 <i class="nav-icon fas fa-user-cog"></i>
