--- a/new-cc-blog/new_blog_project/src/main/resources/templates/user/dashboard/user_dashboard.html
+++ b/new-cc-blog/new_blog_project/src/main/resources/templates/user/dashboard/user_dashboard.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" th:href="@{/static/css/ionicons.min.css}">
 </head>
 <body class="sidebar-mini layout-fixed" style="height: auto;">
-<div class="wrapper">
+<div class="wrapper animated fadeIn">
     <div class="content-header">
         <div class="container-fluid">
             <div class="row mb-2">
