--- a/new-cc-blog/new_blog_project/src/main/resources/templates/user/user.html
+++ b/new-cc-blog/new_blog_project/src/main/resources/templates/user/user.html
@@ -15,7 +15,7 @@
 </head>
 <body class="hold-transition sidebar-mini layout-fixed" data-panel-auto-height-mode="height">
 <div class="wrapper">
-    <nav class="main-header navbar navbar-expand navbar-white navbar-light">
+    <nav class="main-header navbar navbar-expand navbar-white navbar-light" style="overflow: hidden">
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
